fix some alignment issues

--- a/recipe-page/scss/recipe.scss
+++ b/recipe-page/scss/recipe.scss
@@ -18,6 +18,7 @@ font-weight: 400;
     flex-direction: row;
     justify-content: center;
     .main-content{
+        margin-top: 80px;
         background-color: #fff;
         width: 650px;
         border-radius: 10px;
